<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".View.Login"
    android:background="@drawable/login"
    >

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="145dp"
        android:layout_height="122dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_background_logo_round"
        android:contentDescription="@string/logo" />
    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/college_finder"
        android:textAllCaps="true"
        android:textColor="#333333"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Logo"/>
    <TextView
        android:id="@+id/tvDiscuss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discover_colleges"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLogin"
        android:textColor="#333333"
        android:fontFamily="@font/font"/>
    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        app:layout_constraintStart_toStartOf="@id/etUserName"
        app:layout_constraintTop_toBottomOf="@id/tvLogin"
        app:layout_constraintBottom_toTopOf="@id/etUserName"
        android:layout_marginTop="30dp"
        android:textSize="15sp"
        android:textColor="#333333"
        android:fontFamily="@font/font"/>

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="10dp"
        android:autofillHints="username"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:hint="@string/userName"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/LightGray"
        android:textColorHint="@color/LightGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUserName"
        android:fontFamily="@font/font"/>
    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="@id/etPassword"
        app:layout_constraintTop_toBottomOf="@id/etUserName"
        app:layout_constraintBottom_toTopOf="@id/etPassword"
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        android:textColor="#333333"
        android:fontFamily="@font/font"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="10dp"
        android:autofillHints="password"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:fontFamily="@font/font"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/LightGray"
        android:textColorHint="#1976D2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:backgroundTint="@color/Orange"
        android:text="@string/login"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        android:layout_marginTop="80dp"
        android:textColor="#fff"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="@id/btnLogin"
        app:layout_constraintEnd_toEndOf="@id/btnLogin"
        app:flow_horizontalBias="0.0"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginTop="16dp"
        >
        <TextView
            android:id="@+id/tvDoNot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_account"
            android:textColor="@color/white"
            android:fontFamily="@font/font"/>
        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="@color/Red"
            android:fontFamily="@font/font"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>